apps/staging/loki/patch-ingress-push.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-push
  namespace: loki
spec:
  tls:
    - hosts:
        - lia-kube.cloudist.solutions
      secretName: loki-tls-secret
  rules:
    - host: lia-kube.cloudist.solutions
