apps/staging/loki/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki
  namespace: loki
spec:
  tls:
    - hosts:
        - lia-kube.cloudist.solutions
      secretName: loki-tls-secret
  rules:
    - host: lia-kube.cloudist.solutions
      http:
        paths:
          - path: /loki
            pathType: Prefix
            backend:
              service:
                name: loki
                port:
                  number: 3100
